--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,11 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/fmt-logo-chroma+transparent.png" />
-		<link rel="icon" href="%sveltekit.assets%/fmt-logo-chroma+transparent.svg" type="image/svg+xml" />
+		<link
+			rel="icon"
+			href="%sveltekit.assets%/fmt-logo-chroma+transparent.svg"
+			type="image/svg+xml"
+		/>
 		<meta name="viewport" content="width=device-width" />
 		<title>MMPA</title>
 		<meta name="description" content="MMPA" />
