--- a/src/app.html
+++ b/src/app.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width" />
 		<title>MMPA</title>
 		<meta name="description" content="MMPA" />
-		<meta content="MMPA1" property="og:title" />
+		<meta content="MMPA" property="og:title" />
 		<meta content="Minecraft Malware Prevention Alliance" property="og:description" />
 		<meta content="https://mmpa.info" property="og:url" />
 		<meta content="%sveltekit.assets%/favicon.png" property="og:image" />
