Fix white extra space thing

--- a/src/app.html
+++ b/src/app.html
@@ -18,7 +18,7 @@
 		<meta content="#ceb7f4" name="theme-color" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="bg-primary">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
